--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -3,6 +3,7 @@ $font-family-main: 'Source Sans Pro', Helvetica, Arial, sans-serif;
 $font-family-headings: 'Source Sans Pro', Helvetica, Arial, sans-serif;
 $font-size: 1.25em;
 
+
 // Padding
 $padding-large: 20%;
 $padding-small: 5%;
@@ -15,16 +16,16 @@ $border-color: rgba(0, 0, 0, 0.1); // rgba recommended if using feature images
 
 // Typography colours
 $text-color: #383838;
-$link-color: #1ABC9C;
+$link-color: #B13939;
 $selection-color: #D4D4D4; // visible when highlighting text
 
 // Header colours
 $header-link-color: #383838;
 
 // Feature image for articles
-$feature-image-text-color: #fff;
+$feature-image-text-color: #000;
 $feature-image-size: cover; // options include "cover", "contain", "auto"
 
 // Header description box
-$header-desc-background-color: #F98752;
+$header-desc-background-color: #832929;
 $header-desc-text-color: #FFF;
